Fix font weight and spacing

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -12,4 +12,12 @@
     h5{
         font-size: 1rem;
     }
+
+    h6{
+        font-size: 0.9rem;
+    }
+
+    &-date{
+        font-size: 0.8rem;
+    }
 }
