--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,7 @@
 body{
     color: $primaryText;
     font-family: 'Nunito Sans', sans-serif;
+    font-weight: 400;
 }
 
 a{
@@ -42,5 +43,5 @@ ul{
 }
 
 h1, h3{
-    font-weight: 600;
+    font-weight: 700;
 }
