--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,5 +1,5 @@
 nav ul{
-    font-weight: 300;
+    font-weight: 200;
     list-style-type: none;
     text-align: right;
 }
